# RECOVERYPILL

./: .gitignore  CHANGES.md  Cargo.toml  PROJECT_FEATURES.md  README.md  generate_icon.py  plan.md
recoverpill/: Cargo.toml  build.rs  recoverpill.rc
recoverpill/src/: build_info.rs  lib.rs  main.rs
recoverpill/src/ai/: classifier.rs  entropy.rs  mod.rs
recoverpill/src/core/: mod.rs  recovery.rs  scanner.rs  signatures.rs
recoverpill/src/disk/: access.rs  android.rs  drive_info.rs  filesystem.rs  mod.rs
recoverpill/src/ui/: app.rs  mod.rs
