[package]
name = "recoverpill"
version = "1.0.0"
edition = "2021"
description = "Herramienta de recuperación de datos con IA"
authors = ["recoverPill Team"]
license = "MIT"

[dependencies]
# UI Framework - egui para interfaz moderna
egui = "0.27"
eframe = "0.27"
rfd = "0.14"

# Windows API para acceso de bajo nivel al disco
winapi = { version = "0.3", features = [
    "winbase", 
    "fileapi", 
    "handleapi", 
    "ioapiset", 
    "errhandlingapi",
    "windef",
    "winnt"
]}

# Procesamiento de imágenes
image = "0.25"

# Utilidades
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

# Paralelización
rayon = "1.8"

# Serialización
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Mutex para compartir estado
parking_lot = "0.12"

# Tiempo
chrono = "0.4"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
